Fixing Java 1.8 compatibility

--- a/env_verify/build.gradle
+++ b/env_verify/build.gradle
@@ -4,7 +4,10 @@ repositories {
     mavenCentral() 
 }
 
-
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 jar {
     manifest {
