--- a/scan_log4j_versions/build.gradle
+++ b/scan_log4j_versions/build.gradle
@@ -4,7 +4,10 @@ repositories {
     mavenCentral() 
 }
 
-
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 jar {
     manifest {
