--- a/.github/workflows/jfrog-sast.yml
+++ b/.github/workflows/jfrog-sast.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Run JFrog SAST
       run: |
         jf audit --sast --format=sarif > jfrog_sast.sarif
-        cat jfrog_sast.sarif
+        cat jfrog_sast.sarif | grep execution
 
 
     - name: Upload output to generate autofix
